<resources>
    <string name="app_name">Victorina</string>

    <string name="textMainTitle">Викторина</string>
    <string name="textMainBTN1">Выбрать тему</string>
    <string name="textMainBTN2">Правила</string>

    <string name="textTemiTitle">Выберите тему</string>
    <string name="textTemiBTN1">История</string>
    <string name="textTemiBTN2">География</string>
    <string name="textTemiBTN3">Кино</string>
    <string name="textTemiBTN4">Спорт</string>
    <string name="textTemiBTN5">Звери</string>

    <string name="txt_rules">Слово «викторина» появилось в 1928 г. в журнале «Огонёк». Известный советский журналист и писатель Михаил Кольцов так озаглавил подборки, включающие в себя вопросы, шарады, ребусы и т. п. Готовил эту развлекательную полосу некто Виктор Микулин, сотрудник журнала. От имени Виктор и последних букв фамилии и сложилось слово «викторина».
Впоследствии нашли связь этого слова со словом «победа». Виктор — лат. победитель.
        Викторина — это хороший способ борьбы со стрессом, который, к тому же, значительно расширяет кругозор. Это особый вид игры, суть которой заключается в угадывании правильных ответов на вопросы одной или множества тематик и разного уровня сложности. Традиционно викторины делят по тематическим аспектам и проводят в узких кругах для развлечения или соревнований в эрудиции. Ценность викторин с ответами состоит в том, что они расширяют кругозор, помогают выявить уровень знаний, содействуют развитию познавательных интересов и смекалки.
    </string>

    <string name="textVictorinaTitle">Правильных ответов: </string>
    <string name="textVictorinaTitle2">0</string>
    <string name="textVictorinaOtvet1">Ответ 1</string>
    <string name="textVictorinaOtvet2">Ответ 2</string>
    <string name="textVictorinaOtvet3">Ответ 3</string>
    <string name="textVictorinaResult">Ответить</string>

    <string name="textVictorinaTrue1">Правильно!</string>
    <string name="textVictorinaTrue2">+1</string>
    <string name="textVictorinaBTNCounty">Продолжить</string>

    <string name="textResultBTN1">Меню</string>
    <string name="textResultBTN2">Рестарт</string>
    <string name="textResultBTN3">Ваш счет:</string>
    <string name="textResultBTN4">0</string>
</resources>