<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VictorinaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/textResult">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/heart1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/heart"
                    />
                <ImageView
                    android:id="@+id/heart2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/heart"
                    />
                <ImageView
                    android:id="@+id/heart3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/heart"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textVictorinaTitle"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/textball"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textVictorinaTitle2"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btnvopr"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:id="@+id/timerGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_btn_vopr"
                />
            <TextView
                android:id="@+id/textVopros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Asfasfasfafasfasf"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@color/color_btn_vopr"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/textOtvet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btnotv"
                android:gravity="center"
                android:onClick="textOtvetOnClick1"
                android:padding="10dp"
                android:text="@string/textVictorinaOtvet1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textOtvet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btnotv"
                android:gravity="center"
                android:onClick="textOtvetOnClick2"
                android:padding="10dp"
                android:text="@string/textVictorinaOtvet2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textOtvet3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btnotv"
                android:gravity="center"
                android:onClick="textOtvetOnClick3"
                android:padding="10dp"
                android:text="@string/textVictorinaOtvet3"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btnotv"
        android:gravity="center"
        android:onClick="textResultOnClick1"
        android:padding="10dp"
        android:text="@string/textVictorinaResult"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_true"
        android:visibility="gone"
        >
        <LinearLayout
            android:id="@+id/linerRelat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/background_true"
            android:gravity="center"
            android:layout_above="@+id/county">
            <TextView
                android:id="@+id/textResult2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textVictorinaTrue1"
                android:gravity="center"
                android:background="@color/background_true"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@color/black"
               />
            <TextView
                android:id="@+id/textResult3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textVictorinaTrue2"
                android:gravity="center"
                android:background="@color/background_true"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/btnvopr"
            android:gravity="center"
            android:onClick="textCountyOnClick"
            android:padding="10dp"
            android:text="@string/textVictorinaBTNCounty"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>